# ReactiveProgressiveIndexing

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ccpp.yml  main.yml
src/: CMakeLists.txt
src/experiment/: experiments.cpp
src/include/experiment/: experiments.hpp
src/include/measurements/: cost_model.hpp
src/include/progressive/: progressive_index.hpp  progressive_quicksort.hpp  qs_avl_tree.hpp
src/include/util/: binary_search.hpp
src/index/: index.cpp
src/measurements/: cost_model.cpp  match.cpp  sort_cost.cpp
src/progressive/: progressive_index.cpp  progressive_quicksort.cpp  qs_avl_tree.cpp
src/util/: binary_search.cpp
test/: CMakeLists.txt  test.cpp
